2: Dynamic value provision Use: <context:property-placeholder location=classpath:student-info.properties/>

--- a/bin/student-info.properties
+++ b/bin/student-info.properties
@@ -1,2 +1,3 @@
-name=Abhilash
-interestedCourse=Java
+student.name=Ishan Jamwal
+student.interestedCourse= Machine Learning
+student.hobby= Lawn Tennis, Table Tennis
