--- a/src/student-info.properties
+++ b/src/student-info.properties
@@ -1,2 +1,3 @@
-name=Abhilash
-interestedCourse=Java
+student.name=Ishan Jamwal
+student.interestedCourse= Machine Learning
+student.hobby= Lawn Tennis, Table Tennis
